static/newtab.css
/* Light: 300 */
/* Regular: 'normal'/400 */
/* Medium: 500 */
/* Bold: 'bold'/700 */

* { box-sizing: border-box }

html, body {
  font-family: Roboto, sans-serif;
}

/**
 * Higher level layout and aesthetic rules for NewTab
 */
.new-tab {
  min-height: 100vh;
}

  /**
   * Clock section
   */
  .new-tab--clock-container {
    display: flex;
    flex-direction: column;

    height: 50vh;
    text-align: center;
  }

    /**
     * Use a flex element to push the clock to the bottom of the container.
     * I'm doing this over something like position: absolute; to preserve
     * wrapping, alignment, fluid width and other nice things that absolute
     * positioning takes away.
     */
    .new-tab--clock-flex {
      flex: 1;
    }
    
    .new-tab--clock {
      margin-bottom: 10vh;
    }

  /**
   * Top Site section
   */
  .new-tab--top-sites {
    text-align: center;
  }

    .new-tab--top-sites>li { display: inline-block; }

  /**
   * Tab Groups section
   */
  .new-tab--tab-groups {
    text-align: center;
    margin-top: 10vh;
  }

/**
 * Clock component
 */
.clock {}

  .clock--time {
    display: block;

    font-size: 72px;
    font-weight: 300;
  }

  .clock--date {
    display: block;

    font-size: 16px;
  }

/**
 * TopSite component
 */
.top-site {
  display: inline-block;

  width: 180px;
  height: 48px;

  background: #5E5E5E;

  margin: 1rem;
}

  .top-site--favicon-container {
    vertical-align: top;
    display: inline-block;

    width: 48px;
    height: 48px;

    background: rgba(256, 256, 256, 0.7);
  }

    .top-site--favicon {
      margin: 16px; /* 16px size + 2*16px margin = 48px */

      width:  16px;
      height: 16px;
    }

  .top-site--title {
    vertical-align: top;
    display: inline-block;

    width: 110px;
    height: 48px;

    white-space: nowrap;
    overflow: hidden;
    text-overflow: clip;

    font-size: 13px;
    text-align: left;
    margin: 0 6px 0 16px;
    line-height: 48px;

    color: rgba(256, 256, 256, 0.9);
  }

/**
 * TabGroup component
 */
.tab-group {
  display: block;
  width: 40vw;
  min-width: 400px;
  margin: 1rem auto;

  background: #5E5E5E;
}

  .tab-group--title-action-container {
    display: flex;
    flex-direction: row;

    padding: 1rem;
  }

    .tab-group--title {
      display: inline-block;
      flex: 1;

      text-align: left;
      font-weight: 500;

      color: rgba(256, 256, 256, 0.9);
    }

    .tab-group--actions {
      display: inline-block;

      color: rgba(256, 256, 256, 0.6);
    }

      .tab-group--actions a:hover {
        cursor: pointer;
        color: rgba(256, 256, 256, 0.9);
      }

      .tab-group--actions>li {
        display: inline-block;

        margin: 0 0.5rem;
      }


  .tab-group--urls {}

    .tab-group--urls li {
      font-size: 13px;
      padding: 0.5rem;
    }

    .tab-group--urls a {
      color: rgba(256, 256, 256, 0.6);
      text-decoration: none;
    }

    .tab-group--urls a:hover {
      color: rgba(256, 256, 256, 0.9);
      text-decoration: underline;
    }

